# src/main/kotlin/it/docaliassicurazioni/v1/routes/UserRoutes.kt
@@ -1,10 +1,0 @@
-package it.docaliassicurazioni.v1.routes
-
-import io.ktor.auth.*
-import io.ktor.routing.*
-
-fun Route.user() {
-    get("/user/{email}") {
-
-    }
-}
